// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KolFormFieldFc should render correctly 1`] = `
<div class="kol-input" role="presentation">
  <label class="input-label" htmlfor="test-id" id="test-id-label">
    <span class="input-label-span">
      <span>
        Test Label
      </span>
    </span>
  </label>
</div>
`;

exports[`KolFormFieldFc should render correctly with div tag 1`] = `
<div class="kol-input" role="presentation">
  <label class="input-label" htmlfor="test-id" id="test-id-label">
    <span class="input-label-span">
      <span>
        Test Label
      </span>
    </span>
  </label>
</div>
`;

exports[`KolFormFieldFc should render correctly with fieldset tag 1`] = `
<fieldset class="kol-input" role="presentation">
  <label class="input-label" htmlfor="test-id" id="test-id-label">
    <span class="input-label-span">
      <span>
        Test Label
      </span>
    </span>
  </label>
</fieldset>
`;

exports[`KolFormFieldFc should render with counter 1`] = `
<div class="kol-input" role="presentation">
  <label class="input-label" htmlfor="test-id" id="test-id-label">
    <span class="input-label-span">
      <span>
        Test Label
      </span>
    </span>
  </label>
  <span aria-atomic="true" aria-live="polite" class="counter" data-testid="input-counter">
    5
    <span aria-label="kol-of" role="img">
      /
    </span>
    10
    <span>
      kol-characters
    </span>
  </span>
</div>
`;

exports[`KolFormFieldFc should render with custom children 1`] = `
<div class="kol-input" role="presentation">
  <label class="input-label" htmlfor="test-id" id="test-id-label">
    <span class="input-label-span">
      <span>
        Test Label
      </span>
    </span>
  </label>
  <input type="text">
</div>
`;

exports[`KolFormFieldFc should render with error message 1`] = `
<div class="error kol-input msg-type-error touched" role="presentation">
  <label class="input-label" htmlfor="test-id" id="test-id-label">
    <span class="input-label-span">
      <span>
        Test Label
      </span>
    </span>
  </label>
  <div aria-hidden="true" class="error kol-alert kol-alert--error kol-alert--msg" description="Error message" id="test-id-error">
    <div class="kol-alert__container">
      <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
      <div class="kol-alert__container-content">
        <div class="kol-alert__content">
          Error message
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`KolFormFieldFc should render with hint 1`] = `
<div class="kol-input" role="presentation">
  <label class="input-label" htmlfor="test-id" id="test-id-label">
    <span class="input-label-span">
      <span>
        Test Label
      </span>
    </span>
  </label>
  <span class="hint" id="test-id-hint">
    Hint message
  </span>
</div>
`;

exports[`KolFormFieldFc should render with required props 1`] = `
<div class="kol-input required" role="presentation">
  <label class="input-label" htmlfor="test-id" id="test-id-label">
    <span class="input-label-span">
      <span>
        Test Label
      </span>
    </span>
  </label>
</div>
`;

exports[`KolFormFieldFc should render with tooltip 1`] = `
<div class="kol-input" role="presentation">
  <label class="input-label" htmlfor="test-id" id="test-id-label">
    <span class="input-label-span">
      <span>
        Test Label
      </span>
    </span>
  </label>
</div>
`;
